--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -1,15 +1,21 @@
 cmake_minimum_required(VERSION 2.8)
 project(DLM)
 
+set(CMAKE_C_COMPILER "gcc")
+
+set(CMAKE_CXX_COMPILER "g++")
+set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} " -std=c++1y -Wall -Weffc++")
+
 include (ExternalProject)
 
 ExternalProject_Add(ssht
                     GIT_REPOSITORY https://github.com/vovani/ssht.git 
-                    GIT_TAG bigfix/inapropriate_inline_usage
+                    GIT_TAG public
                     CONFIGURE_COMMAND ""
                     BUILD_COMMAND make
                     BUILD_IN_SOURCE 1
                     INSTALL_COMMAND ""
+                    UPDATE_DISCONNECTED 1
 )
 
 ExternalProject_Get_Property(ssht source_dir)
