--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -6,6 +6,10 @@ set(CMAKE_C_COMPILER "gcc")
 set(CMAKE_CXX_COMPILER "g++")
 set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} " -std=c++1y -Wall -Weffc++")
 
+include_directories(src) 
+
+find_package(GTest REQUIRED)
+
 include (ExternalProject)
 
 ExternalProject_Add(ssht
