Minor modification to ssht

--- a/cpp/test/CMakeLists.txt
+++ b/cpp/test/CMakeLists.txt
@@ -1,5 +1,5 @@
 
-add_executable(ssht_test ssht_reconstruction.cc)
+add_executable(ssht_test ssht/reconstruction.cc)
 target_link_libraries(ssht_test ${GTEST_BOTH_LIBRARIES} ${Boost_LIBRARIES} ${SSHT_LINK_LIBRARIES} m)
 
 add_custom_target(run_tests
